k8s/apps/mainloop/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainloop-backend
  namespace: mainloop
spec:
  selector:
    app: mainloop-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
