k8s/apps/mainloop/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainloop-frontend
  namespace: mainloop
spec:
  selector:
    app: mainloop-frontend
  ports:
    - port: 3000
      targetPort: 3000
