k8s/apps/mainloop/base/service-git-push.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainloop-git-push
  namespace: mainloop
spec:
  selector:
    app: mainloop-backend
  ports:
    - name: git-push
      port: 80
      targetPort: 8004
