k8s/apps/mainloop/base/service-git-read.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainloop-git-read
  namespace: mainloop
spec:
  selector:
    app: mainloop-backend
  ports:
    - name: git-read
      port: 80
      targetPort: 8003
